# gib

./: .gitignore  COMMANDS.md  PIPELINE_ARCH.md  README.md  config.yaml  pyproject.toml  task.md
gib/: __init__.py
gib/agents/: __init__.py  architect.py  base.py  developer.py  documenter.py  git_agent.py  memory_agent.py  project_analyzer.py  reviewer.py  tester.py
gib/cli/: chat.py  entrypoint.py  free_entrypoint.py  main.py  ui.py  watch.py
gib/config/: __init__.py  loader.py
gib/core/: __init__.py  container.py  state.py  types.py
gib/git/: __init__.py  executor.py  integration.py  intent.py
gib/graph/: __init__.py  registry.py
gib/memory/: __init__.py  context.py  store.py
gib/nodes/: __init__.py  analyzer.py  approval.py  architect.py  context_builder.py  developer.py  file_finder.py  git_node.py  merge.py  patch_builder.py  researcher.py  reviewer.py  security.py  supervisor.py  task_planner.py  test_generator.py
gib/orchestrator/: __init__.py  core.py
gib/pipeline/: __init__.py  graph.py  nodes.py  state.py
gib/prompts/: __init__.py  locale.py  templates.py
gib/providers/: __init__.py  errors.py  openrouter.py
gib/router/: __init__.py  model_router.py
tests/: test_config.py  test_config_migration.py  test_credits.py  test_feature_routing.py  test_file_finder.py  test_free_config.py  test_free_workflow.py  test_freeform_prompt.py  test_git_intent.py  test_memory_context.py  test_project_dirs.py  test_project_root.py  test_router.py  test_security_llm.py  test_theme.py  test_version.py  test_workflow_runs.py  test_workspace.py
(+22 files in other folders)
