[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gib"
version = "0.2.4"
description = "GIB — AI Development Operating System"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.41",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.28",
    "watchdog>=4.0.0",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
    "prompt-toolkit>=3.0.43",
    "langgraph>=1.2.6",
    "langchain-core>=1.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
gib = "gib.cli.entrypoint:main"
gibf = "gib.cli.free_entrypoint:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gib*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
